--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,6 +10,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    matrix:
+      python-version: ["3.10"]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
@@ -18,7 +20,7 @@ jobs:
           key: ${{ hashFiles('requirements.txt', 'requirements-dev.txt') }}-pip
       - uses: actions/setup-python@v2
         with:
-          python-version: ["3.10"]
+          python-version: ${{ matrix.python-version }}
       - name: Install dependancies
         run: |
           python -m pip install --upgrade pip
