--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,8 +10,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    matrix:
-      python-version: ["3.10"]
+    strategy:
+      matrix:
+        python-version: ["3.10"]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
